// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApiKeysAddForm /> should render properly after permissions are loaded 1`] = `
.emotion-106 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #808080;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-103 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-5 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-6 {
  clear: both;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  padding-bottom: 12px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-7 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-9 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-13 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 18px;
  font-weight: 700;
}

.emotion-12 {
  color: #808080;
}

.emotion-105 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
}

.emotion-105 button,
.emotion-105 a {
  margin-right: 16px;
}

.emotion-104 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-104:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-104[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-104,
.emotion-104:hover,
.emotion-104:visited {
  background-color: #73b61c;
}

.emotion-104:hover {
  background-color: #b8d652;
}

.emotion-104[aria-disabled=true] {
  background-color: #808080;
}

<form
  action=""
  className="emotion-106"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        id="name"
        name="name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <fieldset
    className="emotion-103"
  >
    <legend
      className="emotion-5"
    >
      Add Scope
    </legend>
    <div
      className="emotion-6"
    />
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="SystemMonitor"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           System Monitor
        </span>
        <span
          className="emotion-12"
        >
          Allows access to monitoring endpoints
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="SystemManage"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           System Manage
        </span>
        <span
          className="emotion-12"
        >
          Allows access to platform management endpoints
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="SystemProjectOverride"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           System Project Override
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to switch projects
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="SystemProjectDecrypt"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           System Project Decrypt
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to view encrypted project data
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ApiKeyManage"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Api Key Manage
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to manage API keys
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="AssetsRead"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Assets Read
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to read assets and associated files
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="AssetsImport"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Assets Import
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to import assets. (created and update)
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="AssetsDelete"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Assets Delete
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to remove assets
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ProjectManage"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Project Manage
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to manage projects.
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ProjectCreate"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Project Create
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to create projects.
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ProjectFilesRead"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Project Files Read
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to read project files from cloud storage.
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ProjectFilesWrite"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Project Files Write
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to store project files in cloud storage.
        </span>
      </div>
    </label>
  </fieldset>
  <div
    className="emotion-105"
  >
    <button
      aria-disabled={true}
      className="emotion-104"
      onClick={[Function]}
      type="submit"
    >
      Generate Key & Download
    </button>
  </div>
</form>
`;

exports[`<ApiKeysAddForm /> should render properly after permissions are loaded 2`] = `
.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
}

.emotion-15 button,
.emotion-15 a {
  margin-right: 16px;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited {
  background-color: #73b61c;
}

.emotion-14:hover {
  background-color: #b8d652;
}

.emotion-14[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-4 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-5 {
  color: #b3b3b3;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-7 {
  width: 470px;
  font-size: 15px;
  line-height: 18px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 8px;
  border: none;
  resize: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  color: #73b61c;
}

.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-9 {
  padding: 4px;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-10,
.emotion-10:hover,
.emotion-10:visited {
  color: #73b61c;
}

.emotion-10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited {
  background-color: #808080;
}

.emotion-13:hover {
  opacity: 0.5;
}

.emotion-13[aria-disabled=true] {
  background-color: #808080;
}

<div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-0"
      >
        <svg
          data-file-name="checkmark.svg"
          width={20}
        />
      </div>
      <div
        className="emotion-1"
      >
        Key Generated & Copied to Clipboard
      </div>
    </div>
  </div>
  <h3
    className="emotion-4"
  >
    Scope
  </h3>
  <ul
    className="emotion-5"
  >
    <li>
       Api Key Manage
    </li>
  </ul>
  <h3
    className="emotion-4"
  >
    API Key
  </h3>
  <div
    className="emotion-12"
  >
    <textarea
      className="emotion-7"
      defaultValue="FooBarSecretKey"
      rows="5"
    />
    <div
      className="emotion-11"
    >
      <button
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        Copy Key
      </button>
      <span
        className="emotion-9"
      >
        |
      </span>
      <a
        className="emotion-10"
        download="api-key.txt"
        href="data:application/octet-stream;charset=utf-8;base64,Rm9vQmFyU2VjcmV0S2V5"
      >
        Download
      </a>
    </div>
  </div>
  <div
    className="emotion-15"
  >
    <button
      className="emotion-13"
      onClick={[Function]}
      type="button"
    >
      Create Another Key
    </button>
    <a
      className="emotion-14"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      View All
    </a>
  </div>
</div>
`;

exports[`<ApiKeysAddForm /> should render properly after permissions are loaded 3`] = `
.emotion-106 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #808080;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-103 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-5 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-6 {
  clear: both;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  padding-bottom: 12px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-7 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-9 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-13 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 18px;
  font-weight: 700;
}

.emotion-12 {
  color: #808080;
}

.emotion-105 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
}

.emotion-105 button,
.emotion-105 a {
  margin-right: 16px;
}

.emotion-104 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-104:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-104[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-104,
.emotion-104:hover,
.emotion-104:visited {
  background-color: #73b61c;
}

.emotion-104:hover {
  background-color: #b8d652;
}

.emotion-104[aria-disabled=true] {
  background-color: #808080;
}

<form
  action=""
  className="emotion-106"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        id="name"
        name="name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <fieldset
    className="emotion-103"
  >
    <legend
      className="emotion-5"
    >
      Add Scope
    </legend>
    <div
      className="emotion-6"
    />
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="SystemMonitor"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           System Monitor
        </span>
        <span
          className="emotion-12"
        >
          Allows access to monitoring endpoints
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="SystemManage"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           System Manage
        </span>
        <span
          className="emotion-12"
        >
          Allows access to platform management endpoints
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="SystemProjectOverride"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           System Project Override
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to switch projects
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="SystemProjectDecrypt"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           System Project Decrypt
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to view encrypted project data
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ApiKeyManage"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Api Key Manage
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to manage API keys
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="AssetsRead"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Assets Read
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to read assets and associated files
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="AssetsImport"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Assets Import
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to import assets. (created and update)
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="AssetsDelete"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Assets Delete
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to remove assets
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ProjectManage"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Project Manage
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to manage projects.
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ProjectCreate"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Project Create
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to create projects.
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ProjectFilesRead"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Project Files Read
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to read project files from cloud storage.
        </span>
      </div>
    </label>
    <label
      className="emotion-14"
    >
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="ProjectFilesWrite"
        />
        <div
          className="emotion-9"
        >
          <svg
            className="emotion-8"
            data-file-name="checkmark.svg"
            width={14}
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <span
          className="emotion-11"
        >
           Project Files Write
        </span>
        <span
          className="emotion-12"
        >
          Provides ability to store project files in cloud storage.
        </span>
      </div>
    </label>
  </fieldset>
  <div
    className="emotion-105"
  >
    <button
      aria-disabled={true}
      className="emotion-104"
      onClick={[Function]}
      type="submit"
    >
      Generate Key & Download
    </button>
  </div>
</form>
`;
